# kb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: governed-runtime-learning-contract.md  learning-client-capabilities.md  learning-runtime-hygiene.md
hooks/: README.md  on-session-end.sh
hooks/adapters/: codex-adapter.sh  copilot-adapter.sh
hooks/claude-code/: install.sh
hooks/codex-cli/: install.sh
hooks/copilot-cli/: install.sh
hooks/lib/: kb-resolver.sh  kb-utils.sh
install/: hooks.sh  skills.sh
skills/: README.md
skills/kb-adr/: SKILL.md
skills/kb-draft/: SKILL.md
skills/kb-gap/: SKILL.md
skills/kb-session/: SKILL.md
src/kb_mcp/: cli.py  config.py  doctor.py  input_normalization.py  install_hooks.py  note.py  obsidian.py  resolver.py  server.py  update.py  vault_git.py
src/kb_mcp/events/: __init__.py  candidates.py  emergency_spool.py  identity.py  judge_backend.py  judge_inputs.py  judge_runner.py  (+13 more)
tests/: test_cli_surface.py  test_cli_version.py  test_client_capabilities.py  test_event_pipeline.py  test_fastpath_judge.py  test_install_and_doctor.py  test_judge_cli.py  test_judge_inputs.py  test_judge_review_cli.py  test_learning_application_trace.py  test_learning_cli.py  test_learning_metrics.py  test_learning_packet_builder.py  test_learning_resolver.py  test_learning_revocation.py  test_learning_runtime_hygiene.py  test_materialize_applier.py  test_materialize_cli.py  test_note_updates.py  test_policy_projection.py  test_scope_promotion.py  test_tool_input_compat.py
(+31 files in other folders)
